--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cool-ascii-faces": "^1.3.3",
     "express": "~4.9.x"
   },
   "engines": {
@@ -20,7 +21,7 @@
     "node",
     "heroku",
     "express",
-	"uber"
+    "uber"
   ],
   "license": "FUCK You this is mine JK"
 }
